--- a/app/book/[id]/books.module.css
+++ b/app/book/[id]/books.module.css
@@ -1,30 +1,18 @@
-.appBar {
-  display: flex;
-  width: 90%;
-  margin: auto;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 5vh;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
 
 .saveButton {
-  padding: 10px 30px;
-  background: transparent;
+  padding: 5px 20px;
+  background: rgb(33, 7, 231);
   border-radius: 30px;
-  border: 1px solid #000;
+  transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  border: none;
   margin-right: 20px;
   cursor: pointer;
+  float: right;
 }
 
 .saveButton:hover {
+  transition: all .2s ease-in-out;
   background: #000;
   color: #fff;
 }
 
-.titleStyles {
-  text-align: center;
-  text-transform: uppercase;
-  padding-left: 100px;
-}
